--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@devexpress/dx-react-grid-material-ui": "^1.10.0",
     "@material-ui/core": "^3.8.3",
     "@material-ui/icons": "^3.0.2",
+    "firebase": "^5.7.3",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-manifest": "^2.0.9",
@@ -18,6 +19,7 @@
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-typography": "^2.2.5",
     "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-source-firestore": "^1.0.3",
     "gatsby-transformer-sharp": "^2.1.8",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
