--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@devexpress/dx-react-grid-material-ui": "^1.10.0",
     "@material-ui/core": "^3.8.3",
     "@material-ui/icons": "^3.0.2",
+    "@wapps/gatsby-plugin-material-ui": "^1.2.0",
     "firebase": "^5.7.3",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
